package Model;

public class MasterMindGame {
}
