package Model;

public interface Observer {
    void update(int score, int round, int attempt);
}
