package View;

import Model.Observer;

import javax.swing.*;

public class GameWindow extends JFrame implements Observer {
}
