@startuml
'https://plantuml.com/class-diagram
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods
hide interface attributes

package MasterMind{
    class MasterMindApp{
    }
        package Controller{
            class MasterController{
            }
        }
        package Model {
            class MasterMindGame{
            }
            class Pawn{
            }
            enum Color{
            }
            class Hint{
            }
            class HintsLine{
            }
            interface Observer{
            }
            class Round{
            }
            class Game{
            }
            class Combination{
            }
            class Player{
            }
            class Settings{
            }
        }
        package View {
            class GameWindow {
            }
            class StartWindow{
            }
            class EndGameWindow{
            }
        }
}

'Base pas ouf mais c'est un début'
'####VUES####'
GameWindow ...|> Observer
StartWindow ...|> Observer
EndGameWindow ...|> Observer
'####MODEL####'
HintsLine *---> Hint : > possède
Combination *---> Pawn : > possède
Pawn *---> Color : > possède
Game *---> Round : > est un ensemble de
Hint *--> Pawn : > Connait
HintsLine *---> Combination : < possède
MasterMindGame o--> Observer : < observe
Round *---> Combination : > possède (secret)
MasterMindGame o---> Game : > possède
Settings *--> Player : < décide
Game ...> Settings : <<uses>>
Player ..> Game : > joue
'####CONTROLLER####'
MasterController ...> MasterMindGame : > manipule
MasterController ...> Player : > manipule
'####MAIN####'
MasterMindApp ...> MasterMindGame : <<uses>>
@enduml